--- a/src/components/SupportServicesGrid.astro
+++ b/src/components/SupportServicesGrid.astro
@@ -34,9 +34,7 @@ const { services } = Astro.props;
         {service.title}
       </h3>
 
-      <p class="text-gray-600 text-sm leading-relaxed mb-6 flex-1">
-        {service.description}
-      </p>
+      <p class="text-gray-600 text-sm leading-relaxed mb-6 flex-1" set:html={service.description} />
 
       <a
         href={service.link || "/contact"}
