--- a/src/pages/executive-assistant.astro
+++ b/src/pages/executive-assistant.astro
@@ -51,27 +51,27 @@ const supportServices = [
   },
   {
     title: "Research and Data Management",
-    description: "<strong>Data Handling:</strong> Manage data entry for CRM, ERP systems, prepare lists, and conduct surveys. <strong>Research Tasks:</strong> Gather information, including conducting interviews of team members or customers. Prepare summary write-ups.",
+    description: "<strong>Data Handling:</strong> Manage data entry for CRM, ERP systems, prepare lists, and conduct surveys.<br><br><strong>Research Tasks:</strong> Gather information, including conducting interviews of team members or customers. Prepare summary write-ups.",
     icon: "/images/executive-assistant-page/service-card-logo/account-management-150x150.webp"
   },
   {
     title: "Financial and Documentation Oversight",
-    description: "<strong>Financial Tasks:</strong> Manage bill payments and processing, maintaining financial discretion and accuracy. <strong>Document Management:</strong> Handle sensitive documents like expense reports and invoicing. Organize and update your intranet.",
+    description: "<strong>Financial Tasks:</strong> Manage bill payments and processing, maintaining financial discretion and accuracy.<br><br><strong>Document Management:</strong> Handle sensitive documents like expense reports and invoicing. Organize and update your intranet.",
     icon: "/images/executive-assistant-page/service-card-logo/bookkeeping-150x150.webp"
   },
   {
     title: "Project and Team Support",
-    description: "<strong>Project Management:</strong> Coordinate with vendors, manage client relationships, and handle internal projects. <strong>Leadership Support:</strong> Act as a liaison between you and your team members, potentially supporting other leaders if helpful.",
+    description: "<strong>Project Management:</strong> Coordinate with vendors, manage client relationships, and handle internal projects.<br><br><strong>Leadership Support:</strong> Act as a liaison between you and your team members, potentially supporting other leaders if helpful.",
     icon: "/images/executive-assistant-page/service-card-logo/project-management-150x150.webp"
   },
   {
     title: "Personal Assistant Tasks",
-    description: "<strong>Personal Matters:</strong> Manage appointments and personal errands to help maintain your work-life balance. <strong>Transcription Services:</strong> Provide transcription for voicemails, videos, audio recordings, and podcasts.",
+    description: "<strong>Personal Matters:</strong> Manage appointments and personal errands to help maintain your work-life balance.<br><br><strong>Transcription Services:</strong> Provide transcription for voicemails, videos, audio recordings, and podcasts.",
     icon: "/images/executive-assistant-page/service-card-logo/customer-support-150x150.png"
   },
   {
     title: "Schedule Optimization",
-    description: "<strong>Calendar Management:</strong> Schedule meetings, optimize your week and day to ensure maximum impact and avoidance of conflicts. <strong>Meeting Engagement:</strong> Take detailed minutes and ensure follow-ups are clearly communicated.",
+    description: "<strong>Calendar Management:</strong> Schedule meetings, optimize your week and day to ensure maximum impact and avoidance of conflicts.<br><br><strong>Meeting Engagement:</strong> Take detailed minutes and ensure follow-ups are clearly communicated.",
     icon: "/images/executive-assistant-page/service-card-logo/sales-150x150.webp"
   }
 ];
